<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                style="@style/labelTargetList"
                android:id="@+id/label_editor_collection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_editors_collection"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_editors_collection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="@dimen/margin_start_target_selection"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_editor_collection" />
            <TextView
                style="@style/labelTargetList"
                android:id="@+id/label_thematic_collections"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_thematic_collections"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/list_editors_collection" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_thematic_collection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginStart="@dimen/margin_start_target_selection"
                app:layout_constraintTop_toBottomOf="@+id/label_thematic_collections" />

            <TextView
                style="@style/labelTargetList"
                android:id="@+id/label_for_women"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_for_women"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/list_thematic_collection" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_for_women"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginStart="@dimen/margin_start_target_selection"
                app:layout_constraintTop_toBottomOf="@+id/label_for_women" />
            <TextView
                style="@style/labelTargetList"
                android:id="@+id/label_for_men"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_for_men"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/list_for_women" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_for_men"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/label_for_men"
                style="@style/TargetSelectionList" />
            <TextView
                android:id="@+id/text_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_unknown"
                android:textSize="18sp"
                android:padding="32dp"
                android:drawableTop="@drawable/ic_error"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <View
        android:id="@+id/layout_hint_fab"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_fab_hint"
        android:background="@drawable/button_bg"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:id="@+id/label_hint_tap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/label_hint_tap"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/label_hint_desc"
        app:layout_constraintEnd_toStartOf="@+id/image_arrow"
        app:layout_constraintStart_toStartOf="@id/layout_hint_fab"
        app:layout_constraintTop_toTopOf="@id/layout_hint_fab"
        />

    <TextView
        android:id="@+id/label_hint_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif"
        android:lineSpacingExtra="2sp"
        android:textColor="#3f325c"
        android:textSize="14sp"
        android:textStyle="normal"
        android:text="@string/label_hint_description"

        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/label_hint_tap"
        app:layout_constraintStart_toStartOf="@+id/label_hint_tap"
        app:layout_constraintTop_toBottomOf="@+id/label_hint_tap"
        />

    <ImageView
        android:id="@+id/image_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:src="@drawable/arrow"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/fab_add"
        app:layout_constraintEnd_toStartOf="@+id/fab_add"
        app:layout_constraintTop_toTopOf="@+id/fab_add"
        tools:visibility="visible" />
    <ImageView
        android:id="@+id/image_hand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/hand"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:fabSize="normal"
        app:srcCompat="@drawable/gift_icn" />
</androidx.constraintlayout.widget.ConstraintLayout>
